welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:21: error: not found: value faireV
	faireV();
        ^